--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "axios": "0.15.3",
-    "react": "^15.4.1",
+    "react": "15.4.1",
     "react-bootstrap": "0.30.7",
-    "react-dom": "^15.4.1"
+    "react-dom": "15.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
