--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "0.15.3",
     "react": "15.4.1",
     "react-bootstrap": "0.30.7",
-    "react-dom": "15.4.1"
+    "react-dom": "15.4.1",
+    "react-redux": "5.0.1",
+    "redux": "3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
