--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-bootstrap": "0.30.7",
     "react-dom": "15.4.1",
     "react-redux": "5.0.1",
-    "redux": "3.6.0"
+    "redux": "3.6.0",
+    "redux-thunk": "2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
