--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.4"
+    "enzyme": "2.7.0",
+    "react-addons-test-utils": "15.4.1",
+    "react-scripts": "0.8.4",
+    "react-test-renderer": "15.4.1"
   },
   "dependencies": {
     "axios": "0.15.3",
