--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "0.30.7",
     "react-dom": "15.4.1",
     "react-redux": "5.0.1",
+    "react-router": "3.0.0",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0"
   },
