--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "5.0.6",
     "react-router": "4.1.2",
     "redux": "3.7.2",
+    "redux-saga": "0.15.6",
     "redux-thunk": "2.2.0"
   },
   "scripts": {
