--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "0.16.2",
+    "prop-types": "15.5.10",
     "react": "15.6.1",
     "react-bootstrap": "0.31.2",
     "react-dom": "15.6.1",
