--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "enzyme": "2.9.1",
     "react-addons-test-utils": "15.6.0",
-    "react-scripts": "1.0.11",
+    "react-scripts": "1.0.12",
     "react-test-renderer": "15.6.1"
   },
   "dependencies": {
@@ -15,7 +15,8 @@
     "react-bootstrap": "0.31.2",
     "react-dom": "15.6.1",
     "react-redux": "5.0.6",
-    "react-router": "4.1.2",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
     "redux": "3.7.2",
     "redux-saga": "0.15.6",
     "redux-thunk": "2.2.0"
