--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "enzyme": "2.9.1",
-    "react-addons-test-utils": "15.6.0",
-    "react-scripts": "1.0.13",
-    "react-test-renderer": "15.6.1"
+    "enzyme": "3.1.0",
+    "enzyme-adapter-react-16": "1.0.1",
+    "react-addons-test-utils": "15.6.2",
+    "react-scripts": "1.0.14",
+    "react-test-renderer": "16.0.0"
   },
   "dependencies": {
     "axios": "0.16.2",
-    "prop-types": "15.5.10",
-    "react": "15.6.1",
-    "react-bootstrap": "0.31.2",
-    "react-dom": "15.6.1",
+    "prop-types": "15.6.0",
+    "react": "16.0.0",
+    "react-bootstrap": "0.31.3",
+    "react-dom": "16.0.0",
     "react-redux": "5.0.6",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
