--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "axios": "0.17.1",
+    "material-ui": "1.0.0-beta.31",
     "prop-types": "15.6.0",
     "react": "16.2.0",
-    "react-bootstrap": "0.32.0",
     "react-dom": "16.2.0",
     "react-redux": "5.0.6",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
     "redux-saga": "0.16.0",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
