--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "axios": "0.18.0",
     "material-ui": "1.0.0-beta.31",
     "prop-types": "15.6.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.3.0-alpha.1",
+    "react-dom": "16.3.0-alpha.1",
     "react-redux": "5.0.7",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
