--- a/package.json
+++ b/package.json
@@ -3,10 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.2.2",
+    "babel-loader": "7.1.4",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "clean-webpack-plugin": "0.1.19",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
-    "react-scripts": "1.1.1",
-    "react-test-renderer": "16.2.0"
+    "html-webpack-plugin": "3.0.6",
+    "jest": "22.4.2",
+    "react-test-renderer": "16.2.0",
+    "source-map-loader": "0.2.3",
+    "webpack": "4.1.1",
+    "webpack-cli": "2.0.11",
+    "webpack-dev-server": "3.1.1"
   },
   "dependencies": {
     "axios": "0.18.0",
@@ -23,9 +34,12 @@
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "webpack-dev-server --mode development",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "test": "jest --watch"
+  },
+  "jest": {
+    "rootDir": "./src"
   }
 }
