--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "html-webpack-plugin": "3.0.6",
-    "jest": "22.4.2",
+    "jest": "23.0.0-alpha.0",
     "react-test-renderer": "16.2.0",
     "source-map-loader": "0.2.3",
     "webpack": "4.1.1",
-    "webpack-cli": "2.0.11",
+    "webpack-cli": "2.0.12",
     "webpack-dev-server": "3.1.1"
   },
   "dependencies": {
