--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-  "presets": [
-    "env",
-    "react"
-  ]
+  "presets": ["@babel/preset-react"],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
