--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.2.2",
-    "babel-loader": "7.1.4",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-react": "6.24.1",
+    "@babel/core": "7.0.0-beta.42",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.42",
+    "@babel/preset-env": "7.0.0-beta.42",
+    "@babel/preset-react": "7.0.0-beta.42",
+    "babel-core": "7.0.0-beta.3",
+    "babel-loader": "8.0.0-beta.2",
     "clean-webpack-plugin": "0.1.19",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
