--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.2",
     "babel-loader": "7.1.4",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "clean-webpack-plugin": "0.1.19",
