--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "enzyme-adapter-react-16": "1.1.1",
     "html-webpack-plugin": "3.1.0",
     "jest": "23.0.0-alpha.0",
-    "react-test-renderer": "16.2.0",
+    "react-test-renderer": "16.3.0",
     "source-map-loader": "0.2.3",
-    "webpack": "4.2.0",
+    "webpack": "4.4.1",
     "webpack-cli": "2.0.13",
     "webpack-dev-server": "3.1.1"
   },
@@ -24,8 +24,8 @@
     "axios": "0.18.0",
     "material-ui": "1.0.0-beta.31",
     "prop-types": "15.6.1",
-    "react": "16.3.0-alpha.3",
-    "react-dom": "16.3.0-alpha.3",
+    "react": "16.3.0",
+    "react-dom": "16.3.0",
     "react-redux": "5.0.7",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
