fix jest configuration (use babel-jest)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "babel-core": "6.26.3",
     "babel-eslint": "8.2.3",
+    "babel-jest": "22.4.4",
     "babel-loader": "7.1.4",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.7.0",
@@ -38,9 +39,12 @@
     "start": "webpack-dev-server --mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "test": "jest --watch"
+    "test": "jest --watch --no-cache"
   },
   "jest": {
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
