--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "html-webpack-plugin": "3.2.0",
-    "jest": "23.0.0-alpha.4",
-    "react-test-renderer": "16.4.0",
+    "jest": "23.1.0",
+    "react-test-renderer": "16.4.1",
     "source-map-loader": "0.2.3",
-    "webpack": "4.8.3",
-    "webpack-cli": "2.1.4",
+    "webpack": "4.12.0",
+    "webpack-cli": "3.0.8",
     "webpack-dev-server": "3.1.4"
   },
   "dependencies": {
     "axios": "0.18.0",
     "material-ui": "1.0.0-beta.31",
     "prop-types": "15.6.1",
-    "react": "16.4.0",
-    "react-dom": "16.4.0",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
     "react-redux": "5.0.7",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
     "redux": "4.0.0",
     "redux-saga": "0.16.0",
-    "redux-thunk": "2.2.0",
+    "redux-thunk": "2.3.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
