--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "webpack-dev-server": "3.1.4"
   },
   "dependencies": {
+    "@material-ui/core": "1.3.0",
     "axios": "0.18.0",
-    "material-ui": "1.0.0-beta.31",
     "prop-types": "15.6.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
