--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": [
-    "env",
-    "react"
+    "@babel/preset-react"
   ],
-  "plugins": ["transform-class-properties"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
