--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.1",
   "private": true,
   "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-eslint": "8.2.5",
-    "babel-jest": "23.2.0",
-    "babel-loader": "7.1.4",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
+    "@babel/core": "7.0.0-beta.51",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.51",
+    "@babel/preset-env": "7.0.0-beta.51",
+    "@babel/preset-react": "7.0.0-beta.51",
+    "babel-loader": "8.0.0-beta.3",
     "clean-webpack-plugin": "0.1.19",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
@@ -17,7 +15,7 @@
     "jest": "23.2.0",
     "react-test-renderer": "16.4.1",
     "source-map-loader": "0.2.3",
-    "webpack": "4.12.2",
+    "webpack": "4.14.0",
     "webpack-cli": "3.0.8",
     "webpack-dev-server": "3.1.4"
   },
