--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@babel/plugin-proposal-class-properties": "7.0.0-beta.51",
     "@babel/preset-env": "7.0.0-beta.51",
     "@babel/preset-react": "7.0.0-beta.51",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "23.2.0",
     "babel-loader": "8.0.0-beta.3",
     "clean-webpack-plugin": "0.1.19",
     "enzyme": "3.3.0",
