--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.1",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.55",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.55",
-    "@babel/preset-env": "7.0.0-beta.55",
-    "@babel/preset-react": "7.0.0-beta.55",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.4.2",
-    "babel-loader": "8.0.0-beta.3",
+    "babel-loader": "8.0.0",
     "clean-webpack-plugin": "0.1.19",
-    "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "1.1.1",
+    "enzyme": "3.5.0",
+    "enzyme-adapter-react-16": "1.3.0",
     "html-webpack-plugin": "3.2.0",
-    "jest": "23.4.2",
+    "jest": "23.5.0",
     "react-test-renderer": "16.4.2",
-    "source-map-loader": "0.2.3",
-    "webpack": "4.16.3",
+    "source-map-loader": "0.2.4",
+    "webpack": "4.17.1",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.5"
+    "webpack-dev-server": "3.1.6"
   },
   "dependencies": {
-    "@material-ui/core": "1.4.2",
+    "@material-ui/core": "3.0.0",
     "axios": "0.18.0",
     "prop-types": "15.6.2",
     "react": "16.4.2",
