--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "start": "webpack-dev-server --mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "test": "jest --watch --no-cache"
+    "test": "jest --watch --no-cache",
+    "test-all": "jest"
   },
   "jest": {
     "rootDir": "./src",
