--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,16 +14,16 @@ jobs:
 
     - restore_cache:
         keys:
-        - v1-dependencies-{{ checksum "package.json" }}
+        - v2-dependencies-{{ checksum "package.json" }}
 
-        - v1-dependencies-
+        - v2-dependencies-
 
     - run: npm install
 
     - save_cache:
         paths:
         - node_modules
-        key: v1-dependencies-{{ checksum "package.json" }}
+        key: v2-dependencies-{{ checksum "package.json" }}
 
     - run: |
         rm -f ./src/*.js
@@ -42,4 +42,6 @@ workflows:
     - build:
         filters:
           branches:
-            only: master
+            only:
+              - master
+              - circleci-test
