--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "babel-jest": "23.4.2",
     "babel-loader": "8.0.0",
     "clean-webpack-plugin": "0.1.19",
+    "copy-webpack-plugin": "4.5.2",
     "enzyme": "3.5.0",
-    "enzyme-adapter-react-16": "1.3.0",
+    "enzyme-adapter-react-16": "1.3.1",
     "html-webpack-plugin": "3.2.0",
     "jest": "23.5.0",
+    "puppeteer": "1.7.0",
     "react-test-renderer": "16.4.2",
     "source-map-loader": "0.2.4",
     "webpack": "4.17.1",
@@ -24,6 +26,7 @@
   "dependencies": {
     "@material-ui/core": "3.0.1",
     "axios": "0.18.0",
+    "http-server": "0.11.1",
     "prop-types": "15.6.2",
     "react": "16.4.2",
     "react-dom": "16.4.2",
@@ -39,6 +42,7 @@
     "start": "webpack-dev-server --mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
+    "testci": "webpack --mode=development --config=./webpack.config.ci.js",
     "test": "jest --watch --no-cache",
     "test-all": "jest"
   },
