--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "enzyme-adapter-react-16": "1.3.1",
     "html-webpack-plugin": "3.2.0",
     "jest": "23.5.0",
+    "npm-check-updates": "2.14.2",
     "puppeteer": "1.7.0",
     "react-test-renderer": "16.4.2",
     "source-map-loader": "0.2.4",
@@ -45,7 +46,8 @@
     "testci": "webpack --mode=development --config=./webpack.config.ci.js",
     "httpserver": "http-server ./build",
     "test": "jest --watch --no-cache",
-    "test-all": "jest"
+    "test-all": "jest",
+    "ncuu": "ncu -u"
   },
   "jest": {
     "rootDir": "./src",
