--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
     "clean-webpack-plugin": "0.1.19",
-    "copy-webpack-plugin": "4.5.3",
+    "copy-webpack-plugin": "4.5.4",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.6.0",
     "html-webpack-plugin": "3.2.0",
@@ -20,12 +20,12 @@
     "puppeteer": "1.9.0",
     "react-test-renderer": "16.5.2",
     "source-map-loader": "0.2.4",
-    "webpack": "4.20.2",
+    "webpack": "4.22.0",
     "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.9"
+    "webpack-dev-server": "3.1.10"
   },
   "dependencies": {
-    "@material-ui/core": "3.2.2",
+    "@material-ui/core": "3.3.0",
     "axios": "0.18.0",
     "http-server": "0.11.1",
     "prop-types": "15.6.2",
@@ -43,7 +43,7 @@
     "start": "webpack-dev-server --mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "testci": "webpack --mode=development --config=./webpack.config.ci.js",
+    "testci": "webpack --mode=development --config=./webpack.config.ci.js && node ./puppeteer/openpage.js",
     "httpserver": "http-server ./build",
     "test": "jest --watch --no-cache",
     "test-all": "jest",
