--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "axios": "0.18.0",
     "http-server": "0.11.1",
     "prop-types": "15.6.2",
-    "react": "16.6.0",
-    "react-dom": "16.6.0",
+    "react": "16.7.0-alpha.0",
+    "react-dom": "16.7.0-alpha.0",
     "react-redux": "5.1.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
