--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html-webpack-plugin": "3.2.0",
     "jest": "23.6.0",
     "npm-check-updates": "2.14.2",
+    "prettier": "1.14.3",
     "puppeteer": "1.10.0",
     "react-test-renderer": "16.6.0",
     "source-map-loader": "0.2.4",
