--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.6.0",
     "html-webpack-plugin": "3.2.0",
+    "husky": "1.1.3",
     "jest": "23.6.0",
+    "lint-staged": "8.0.4",
     "npm-check-updates": "2.14.2",
     "prettier": "1.15.1",
     "puppeteer": "1.10.0",
@@ -53,6 +55,17 @@
     "rootDir": "./src",
     "transform": {
       "^.+\\.js$": "babel-jest"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
   }
 }
