--- a/package.json
+++ b/package.json
@@ -3,38 +3,38 @@
   "version": "1.0.1",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.2.0",
-    "@babel/plugin-proposal-class-properties": "7.2.0",
-    "@babel/preset-env": "7.2.0",
+    "@babel/core": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "7.2.3",
+    "@babel/preset-env": "7.2.3",
     "@babel/preset-react": "7.0.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
     "clean-webpack-plugin": "1.0.0",
     "copy-webpack-plugin": "4.6.0",
-    "enzyme": "3.7.0",
-    "enzyme-adapter-react-16": "1.7.0",
+    "enzyme": "3.8.0",
+    "enzyme-adapter-react-16": "1.7.1",
     "html-webpack-plugin": "3.2.0",
-    "husky": "1.2.0",
+    "husky": "1.2.1",
     "jest": "23.6.0",
     "lint-staged": "8.1.0",
     "npm-check-updates": "2.15.0",
     "prettier": "1.15.3",
     "puppeteer": "1.11.0",
-    "react-test-renderer": "16.6.3",
+    "react-test-renderer": "16.7.0",
     "source-map-loader": "0.2.4",
-    "webpack": "4.26.1",
+    "webpack": "4.28.1",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10"
   },
   "dependencies": {
-    "@material-ui/core": "3.6.1",
+    "@material-ui/core": "3.7.0",
     "axios": "0.18.0",
     "http-server": "0.11.1",
     "prop-types": "15.6.2",
-    "react": "16.7.0-alpha.2",
-    "react-dom": "16.7.0-alpha.2",
-    "react-redux": "5.1.1",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
+    "react-redux": "6.0.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
