--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "webpack-dev-server": "3.1.14"
   },
   "dependencies": {
-    "@material-ui/core": "3.8.3",
+    "@material-ui/core": "3.9.2",
     "axios": "0.18.0",
     "http-server": "0.11.1",
     "prop-types": "15.6.2",
-    "react": "16.8.0-alpha.1",
-    "react-dom": "16.8.0-alpha.1",
-    "react-redux": "6.0.0",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
+    "react-redux": "6.0.1",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
