--- a/package.json
+++ b/package.json
@@ -3,41 +3,41 @@
   "version": "1.0.1",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.3.0",
+    "@babel/core": "7.4.4",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/preset-env": "7.3.1",
+    "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "24.1.0",
-    "babel-loader": "8.0.5",
-    "clean-webpack-plugin": "1.0.1",
-    "copy-webpack-plugin": "4.6.0",
-    "enzyme": "3.8.0",
-    "enzyme-adapter-react-16": "1.9.1",
+    "babel-jest": "24.8.0",
+    "babel-loader": "8.0.6",
+    "clean-webpack-plugin": "2.0.2",
+    "copy-webpack-plugin": "5.0.3",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.13.0",
     "html-webpack-plugin": "3.2.0",
-    "husky": "1.3.1",
-    "jest": "24.1.0",
-    "lint-staged": "8.1.3",
-    "npm-check-updates": "^2.15.0",
-    "prettier": "1.16.4",
-    "puppeteer": "1.12.2",
-    "react-test-renderer": "16.8.1",
+    "husky": "2.3.0",
+    "jest": "24.8.0",
+    "lint-staged": "8.1.6",
+    "npm-check-updates": "3.1.9",
+    "prettier": "1.17.1",
+    "puppeteer": "1.16.0",
+    "react-test-renderer": "16.8.6",
     "source-map-loader": "0.2.4",
-    "webpack": "4.29.2",
-    "webpack-cli": "3.2.3",
-    "webpack-dev-server": "3.1.14"
+    "webpack": "4.31.0",
+    "webpack-cli": "3.3.2",
+    "webpack-dev-server": "3.3.1"
   },
   "dependencies": {
-    "@material-ui/core": "3.9.2",
+    "@material-ui/core": "3.9.3",
     "axios": "0.18.0",
     "http-server": "0.11.1",
-    "prop-types": "15.6.2",
-    "react": "16.8.1",
-    "react-dom": "16.8.1",
-    "react-redux": "6.0.0",
-    "react-router": "4.3.1",
-    "react-router-dom": "4.3.1",
+    "prop-types": "15.7.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-redux": "7.0.3",
+    "react-router": "5.0.0",
+    "react-router-dom": "5.0.0",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
     "typeface-roboto": "0.0.54"
