--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "copy-webpack-plugin": "5.0.3",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.13.0",
+    "enzyme-to-json": "3.3.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "2.3.0",
     "jest": "24.8.0",
@@ -49,6 +50,7 @@
     "testci": "webpack --mode=development --config=./webpack.config.ci.js && node ./puppeteer/openpage.js",
     "httpserver": "http-server ./build",
     "test": "jest --watch --no-cache",
+    "test-coverage": "jest --coverage",
     "test-all": "jest",
     "ncuu": "ncu -u"
   },
@@ -56,7 +58,10 @@
     "rootDir": "./src",
     "transform": {
       "^.+\\.js$": "babel-jest"
-    }
+    },
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "lint-staged": {
     "*.{js,json}": [
