--- a/package.json
+++ b/package.json
@@ -3,41 +3,41 @@
   "version": "1.0.1",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.7.2",
-    "@babel/plugin-proposal-class-properties": "7.7.0",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/preset-env": "7.7.1",
-    "@babel/preset-react": "7.7.0",
-    "@testing-library/react": "9.3.2",
+    "@babel/core": "7.11.1",
+    "@babel/plugin-proposal-class-properties": "7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/preset-env": "7.11.0",
+    "@babel/preset-react": "7.10.4",
+    "@testing-library/react": "10.4.8",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "24.9.0",
-    "babel-loader": "8.0.6",
+    "babel-jest": "26.3.0",
+    "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "5.0.5",
-    "html-webpack-plugin": "3.2.0",
-    "husky": "3.0.9",
-    "jest": "24.9.0",
-    "lint-staged": "9.4.3",
-    "npm-check-updates": "3.2.1",
-    "prettier": "1.19.1",
-    "puppeteer": "2.0.0",
-    "react-test-renderer": "16.12.0",
-    "source-map-loader": "0.2.4",
-    "webpack": "4.41.2",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0"
+    "copy-webpack-plugin": "6.0.3",
+    "html-webpack-plugin": "4.3.0",
+    "husky": "4.2.5",
+    "jest": "26.4.0",
+    "lint-staged": "10.2.11",
+    "npm-check-updates": "7.1.1",
+    "prettier": "2.0.5",
+    "puppeteer": "5.2.1",
+    "react-test-renderer": "16.13.1",
+    "source-map-loader": "1.0.1",
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "@material-ui/core": "4.6.1",
-    "axios": "0.19.0",
-    "http-server": "0.11.1",
+    "@material-ui/core": "4.11.0",
+    "axios": "0.19.2",
+    "http-server": "0.12.3",
     "prop-types": "15.7.2",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-redux": "7.1.3",
-    "react-router": "5.1.2",
-    "react-router-dom": "5.1.2",
-    "redux": "4.0.4",
+    "react": "17.0.0-rc.0",
+    "react-dom": "17.0.0-rc.0",
+    "react-redux": "7.2.1",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "redux": "4.0.5",
     "redux-thunk": "2.3.0",
     "typeface-roboto": "0.0.75"
   },
