--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,6 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties","@babel/plugin-syntax-dynamic-import"
+    "@babel/plugin-syntax-dynamic-import"
   ]
 }
