--- a/package.json
+++ b/package.json
@@ -3,38 +3,38 @@
   "version": "1.0.1",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.11.6",
-    "@babel/plugin-proposal-class-properties": "7.10.4",
+    "@babel/core": "7.12.3",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.11.5",
-    "@babel/preset-react": "7.10.4",
-    "@testing-library/react": "11.0.4",
+    "@babel/preset-env": "7.12.1",
+    "@babel/preset-react": "7.12.5",
+    "@testing-library/react": "11.1.2",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "26.5.2",
-    "babel-loader": "8.1.0",
+    "babel-jest": "26.6.3",
+    "babel-loader": "8.2.1",
     "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "6.2.1",
+    "copy-webpack-plugin": "6.3.0",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.0",
-    "jest": "26.5.3",
-    "lint-staged": "10.4.0",
-    "npm-check-updates": "9.0.4",
+    "jest": "26.6.3",
+    "lint-staged": "10.5.1",
+    "npm-check-updates": "10.0.0",
     "prettier": "2.1.2",
-    "puppeteer": "5.3.1",
-    "react-test-renderer": "16.13.1",
-    "source-map-loader": "1.0.1",
-    "webpack": "4.44.1",
-    "webpack-cli": "3.3.12",
+    "puppeteer": "5.4.1",
+    "react-test-renderer": "17.0.1",
+    "source-map-loader": "1.1.2",
+    "webpack": "5.4.0",
+    "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
     "@material-ui/core": "4.11.0",
-    "axios": "0.20.0",
+    "axios": "0.21.0",
     "http-server": "0.12.3",
     "prop-types": "15.7.2",
-    "react": "17.0.0-rc.1",
-    "react-dom": "17.0.0-rc.1",
-    "react-redux": "7.2.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
@@ -42,7 +42,7 @@
     "typeface-roboto": "1.1.13"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack serve --mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "testci": "webpack --mode=development --config=./webpack.config.ci.js && node ./puppeteer/openpage.js",
