--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.5",
+    "@babel/runtime": "7.12.5",
     "@testing-library/react": "11.1.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "26.6.3",
