--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.2",
+    "@material-ui/core": "5.0.0-alpha.19",
     "axios": "0.21.0",
     "http-server": "0.12.3",
     "prop-types": "15.7.2",
