--- a/package.json
+++ b/package.json
@@ -6,28 +6,30 @@
     "@babel/core": "7.14.3",
     "@babel/plugin-proposal-class-properties": "7.13.0",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.14.2",
+    "@babel/preset-env": "7.14.4",
     "@babel/preset-react": "7.13.13",
     "@babel/runtime": "7.14.0",
     "@testing-library/react": "11.2.7",
-    "babel-jest": "26.6.3",
+    "babel-jest": "27.0.2",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "9.0.0",
     "html-webpack-plugin": "5.3.1",
     "husky": "6.0.0",
-    "jest": "26.6.3",
+    "jest": "27.0.4",
     "lint-staged": "11.0.0",
-    "npm-check-updates": "11.5.13",
-    "prettier": "2.3.0",
+    "npm-check-updates": "11.6.0",
+    "prettier": "2.3.1",
     "react-test-renderer": "17.0.2",
     "source-map-loader": "3.0.0",
-    "webpack": "5.37.1",
+    "webpack": "5.38.1",
     "webpack-cli": "4.7.0",
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
-    "@material-ui/core": "5.0.0-alpha.34",
+    "@emotion/react": "11.4.0",
+    "@emotion/styled": "11.3.0",
+    "@material-ui/core": "5.0.0-alpha.35",
     "axios": "0.21.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
@@ -43,16 +45,16 @@
     "start": "webpack serve --mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "test": "jest src --watch --no-cache",
+    "test": "jest src",
     "test-coverage": "jest src --coverage",
-    "test-all": "jest src",
     "ncuu": "ncu -u"
   },
   "jest": {
     "rootDir": "./src",
     "transform": {
       "^.+\\.js$": "babel-jest"
-    }
+    },
+    "testEnvironment": "jsdom"
   },
   "lint-staged": {
     "*.{js,json}": [
