--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
-    "@material-ui/core": "5.0.0-alpha.35",
+    "@mui/material": "5.0.2",
     "axios": "0.21.4",
     "prop-types": "15.7.2",
     "react": "17.0.2",
