--- a/package.json
+++ b/package.json
@@ -3,42 +3,43 @@
   "version": "1.1.0",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.15.5",
-    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/core": "7.16.0",
+    "@babel/plugin-proposal-class-properties": "7.16.0",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.15.6",
-    "@babel/preset-react": "7.14.5",
-    "@babel/runtime": "7.15.4",
-    "@testing-library/react": "12.1.0",
-    "babel-jest": "27.2.0",
-    "babel-loader": "8.2.2",
+    "@babel/preset-env": "7.16.4",
+    "@babel/preset-react": "7.16.0",
+    "@babel/runtime": "7.16.3",
+    "@testing-library/react": "12.1.2",
+    "babel-jest": "27.3.1",
+    "babel-loader": "8.2.3",
     "clean-webpack-plugin": "4.0.0",
-    "copy-webpack-plugin": "9.0.1",
-    "html-webpack-plugin": "5.3.2",
-    "husky": "7.0.2",
-    "jest": "27.2.0",
-    "lint-staged": "11.1.2",
-    "npm-check-updates": "11.8.5",
+    "copy-webpack-plugin": "10.0.0",
+    "html-webpack-plugin": "5.5.0",
+    "husky": "7.0.4",
+    "jest": "27.3.1",
+    "lint-staged": "12.1.2",
+    "npm-check-updates": "12.0.2",
     "prettier": "2.4.1",
     "react-test-renderer": "17.0.2",
     "source-map-loader": "3.0.0",
-    "webpack": "5.53.0",
-    "webpack-cli": "4.8.0",
-    "webpack-dev-server": "4.2.1"
+    "webpack": "5.64.2",
+    "webpack-cli": "4.9.1",
+    "webpack-dev-server": "4.5.0"
   },
   "dependencies": {
-    "@emotion/react": "11.4.1",
-    "@emotion/styled": "11.3.0",
-    "@mui/material": "5.0.2",
-    "axios": "0.21.4",
+    "@emotion/react": "11.6.0",
+    "@emotion/styled": "11.6.0",
+    "@mui/material": "5.1.1",
+    "axios": "0.24.0",
+    "mini-css-extract-plugin": "2.4.5",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.5",
-    "react-router": "5.2.1",
-    "react-router-dom": "5.3.0",
-    "redux": "4.1.1",
-    "redux-thunk": "2.3.0",
+    "react-redux": "7.2.6",
+    "react-router": "6.0.2",
+    "react-router-dom": "6.0.2",
+    "redux": "4.1.2",
+    "redux-thunk": "2.4.0",
     "typeface-roboto": "1.1.13"
   },
   "scripts": {
