--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@babel/preset-env": "7.16.4",
     "@babel/preset-react": "7.16.0",
     "@babel/runtime": "7.16.3",
+    "@cypress/react": "5.10.3",
+    "@cypress/webpack-dev-server": "1.7.0",
     "@testing-library/react": "12.1.2",
     "babel-jest": "27.3.1",
     "babel-loader": "8.2.3",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "10.0.0",
+    "cypress": "9.0.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "7.0.4",
     "jest": "27.3.1",
@@ -45,9 +48,12 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
+    "itest-debug": "cypress open",
+    "itest": "cypress run --browser chrome",
     "ncuu": "ncu -u",
     "prepare": "husky install",
     "start": "webpack serve --mode development",
+    "starti": "webpack serve --mode development --config=./itest/webpack.config.itest.js",
     "test": "jest src",
     "test-coverage": "jest src --coverage"
   },
