--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+      - run: npm set-script prepare ''
       - run: npm install
       - name: Cypress
         uses: cypress-io/github-action@v2
