react 18 - force install of mui

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: '16'
       - run: npm set-script prepare ''
-      - run: npm install
+      - run: npm install -f
       - name: Cypress
         uses: cypress-io/github-action@v2
         with:
