--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.1.0",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.18.13",
-    "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.18.10",
-    "@babel/preset-react": "7.18.6",
-    "@babel/runtime": "7.18.9",
+    "@types/jest": "29.1.2",
+    "@types/react-dom": "18.0.6",
+    "@types/react-router-dom": "5.3.3",
     "@cypress/react": "6.2.0",
     "@cypress/webpack-dev-server": "2.3.0",
     "@testing-library/react": "13.3.0",
@@ -24,9 +21,11 @@
     "mini-css-extract-plugin": "2.6.1",
     "npm-check-updates": "16.1.0",
     "prettier": "2.7.1",
-    "prop-types": "15.8.1",
     "react-test-renderer": "18.2.0",
     "source-map-loader": "4.0.0",
+    "ts-jest": "29.0.3",
+    "ts-loader": "9.4.1",
+    "typescript": "4.8.4",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.10.1"
